SetOnceMap and AddOnceSet green; 6 failing tests remaining